# hello-sdl

./: CMakeLists.txt  README.md
src/: main.cpp
